# twitchTransFreeNext

./: .gitignore  LICENSE  README.md  build.py  config.py  config.txt  database_controller.py  pyproject.toml  requiremenets.txt  requirements.txt  roomUUID_checker.py  sound.py  tts.py  twitchTransFN.py
.claude/: CLAUDE.md
.github/workflows/: build.yaml  build.yml
doc/: GASURLの入手方法.txt  GASスクリプト.txt
